plex/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-lan-radarr
spec:
  ingressClassName: nginx-lan
  rules:
  - host: radarr.local
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radarr.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-wg-radarr
  annotations:
    sclem.dev/external-dns: "true"
spec:
  ingressClassName: nginx-wg
  rules:
  - host: radarr.local
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radarr.local
